--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ output/*
 
 # Exceções - arquivos que devem ser mantidos
 !assets/*
-!input/.gitignore
-!output/.gitignore
+!input/.gitkeep
+!output/.gitkeep
